--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,61 +2,125 @@ name: Enrollment Service CI/CD
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [main]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [main]
+
+env:
+  IMAGE_NAME: enrollment-service
+  NODE_VERSION: "18"
 
 jobs:
-  build:
+  # ── Job 1: Test ────────────────────────────────────────────────
+  test:
+    name: Test
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-          cache: 'npm'
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
 
       - name: Install Dependencies
         run: npm ci
 
+      - name: Run Tests
+        run: npm test
+        env:
+          PORT: 5003
+          MONGO_URI: mongodb://localhost/test
+          STUDENT_SERVICE_URL: http://localhost:5001
+          COURSE_SERVICE_URL: http://localhost:5002
+          GRADE_SERVICE_URL: http://localhost:5004
+
+  # ── Job 2: Snyk Security Scan (DevSecOps / SAST) ───────────────
   security-scan:
+    name: Snyk Security Scan
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run Snyk to check for vulnerabilities
-        # You will need to add a SNYK_TOKEN to your GitHub repo secrets
-        # https://github.com/snyk/actions
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --severity-threshold=high
+        continue-on-error: true
 
+  # ── Job 3: Build & Push to Docker Hub ──────────────────────────
   docker-build-and-push:
+    name: Build & Push to Docker Hub
     runs-on: ubuntu-latest
-    needs: security-scan
+    needs: test
+    if: github.ref == 'refs/heads/main'
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest
+            type=sha,prefix=sha-
+
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: nuwanifonseka/enrollment-service:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          cache-to: type=inline
+
+  # ── Job 4: Deploy to Google Cloud Run ──────────────────────────
+  deploy:
+    name: Deploy to Google Cloud Run
+    runs-on: ubuntu-latest
+    needs: docker-build-and-push
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Deploy to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@v2
+        with:
+          service: enrollment-service
+          region: us-central1
+          image: docker.io/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          flags: --allow-unauthenticated --port=5003
+          env_vars: |
+            MONGO_URI=${{ secrets.MONGO_URI }}
+            STUDENT_SERVICE_URL=${{ secrets.STUDENT_SERVICE_URL }}
+            COURSE_SERVICE_URL=${{ secrets.COURSE_SERVICE_URL }}
+            GRADE_SERVICE_URL=${{ secrets.GRADE_SERVICE_URL }}
+
+      - name: Summary
+        run: |
+          echo "✅ Deployment triggered for enrollment-service"
+          echo "🐳 Image: ${{ secrets.DOCKER_USERNAME }}/enrollment-service:latest"
