--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,6 +115,7 @@ jobs:
           image: docker.io/nuwanifonseka/${{ env.IMAGE_NAME }}:latest
           flags: --allow-unauthenticated
           env_vars: |
+            PORT=8080
             MONGO_URI=${{ secrets.MONGO_URI }}
             STUDENT_SERVICE_URL=${{ secrets.STUDENT_SERVICE_URL }}
             COURSE_SERVICE_URL=${{ secrets.COURSE_SERVICE_URL }}
