--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,7 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=registry,ref=nuwanifonseka/${{ env.IMAGE_NAME }}:latest
-          cache-to: type=inline
+          no-cache: true
 
   # ── Job 4: Deploy to Google Cloud Run ──────────────────────────
   deploy:
