--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
   NODE_VERSION: "20"
 
 jobs:
-  # ── Job 1: Test ────────────────────────────────────────────────
+  # --- Job 1: Test ------------------------------------------------
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -38,29 +38,45 @@ jobs:
           COURSE_SERVICE_URL: http://localhost:5002
           GRADE_SERVICE_URL: http://localhost:5004
 
-  # ── Job 2: Snyk Security Scan (DevSecOps / SAST) ───────────────
-  security-scan:
-    name: Snyk Security Scan
+  # --- Job 2: Snyk SAST (DevSecOps) ------------------------------
+  snyk_sast:
+    name: Snyk SAST
     runs-on: ubuntu-latest
     needs: test
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Snyk Code SAST (fail on high/critical)
+        run: npx snyk code test --severity-threshold=high
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high
-        continue-on-error: true
 
-  # ── Job 3: Build & Push to Docker Hub ──────────────────────────
+      - name: Generate Snyk JSON report
+        run: npx snyk code test --json-file-output=snyk-code-report.json || true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Upload Snyk report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: snyk-code-report
+          path: snyk-code-report.json
+
+  # --- Job 3: Build & Push to Docker Hub -------------------------
   docker-build-and-push:
     name: Build & Push to Docker Hub
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, snyk_sast]
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -93,7 +109,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           no-cache: true
 
-  # ── Job 4: Deploy to Google Cloud Run ──────────────────────────
+  # --- Job 4: Deploy to Google Cloud Run -------------------------
   deploy:
     name: Deploy to Google Cloud Run
     runs-on: ubuntu-latest
@@ -121,5 +137,5 @@ jobs:
 
       - name: Summary
         run: |
-          echo "✅ Deployment triggered for enrollment-service"
-          echo "🐳 Image: nuwanifonseka/enrollment-service:latest"
+          echo "Deployment triggered for enrollment-service"
+          echo "Image: nuwanifonseka/enrollment-service:latest"
