--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,9 @@ jobs:
           COURSE_SERVICE_URL: http://localhost:5002
           GRADE_SERVICE_URL: http://localhost:5004
 
-  # --- Job 2: Snyk SAST (DevSecOps) ------------------------------
-  snyk_sast:
-    name: Snyk SAST
+  # --- Job 2: Snyk Dependency Scan (DevSecOps) -------------------
+  snyk_scan:
+    name: Snyk Security Scan
     runs-on: ubuntu-latest
     needs: test
 
@@ -56,27 +56,27 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Snyk Code SAST (fail on high/critical)
-        run: npx snyk code test --severity-threshold=high
+      - name: Run Snyk Open Source Scan (fail on high/critical)
+        run: npx snyk test --severity-threshold=high
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - name: Generate Snyk JSON report
-        run: npx snyk code test --json-file-output=snyk-code-report.json || true
+        run: npx snyk test --json-file-output=snyk-report.json || true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - name: Upload Snyk report artifact
         uses: actions/upload-artifact@v4
         with:
-          name: snyk-code-report
-          path: snyk-code-report.json
+          name: snyk-report
+          path: snyk-report.json
 
   # --- Job 3: Build & Push to Docker Hub -------------------------
   docker-build-and-push:
     name: Build & Push to Docker Hub
     runs-on: ubuntu-latest
-    needs: [test, snyk_sast]
+    needs: [test, snyk_scan]
     if: github.ref == 'refs/heads/main'
 
     steps:
