Harden security defaults and deployment access

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ MONGO_URI=mongodb+srv://<username>:<password>@cluster0.xxxxx.mongodb.net/enrollm
 STUDENT_SERVICE_URL=http://localhost:5001
 COURSE_SERVICE_URL=http://localhost:5002
 GRADE_SERVICE_URL=http://localhost:5004
+ALLOW_AUTH_BYPASS=false
+ALLOW_MOCK_SERVICES=false
