fix(enrollment): support /api routes and harden downstream timeouts

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ COURSE_SERVICE_URL=http://localhost:5002
 GRADE_SERVICE_URL=http://localhost:5004
 ALLOW_AUTH_BYPASS=false
 ALLOW_MOCK_SERVICES=false
+AUTH_TIMEOUT_MS=5000
+SERVICE_TIMEOUT_MS=5000
